--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "dev-master-1"
     }
   },
   "minimum-stability": "dev",
